# PyTime

archive/: README.md
simple_os/: CMakeLists.txt  README.md
simple_os/apps/: ExampleApp.cpp
simple_os/include/: App.h  AppManager.h  DisplayStub.h
simple_os/src/: AppManager.cpp  main.cpp
src/: CMakeLists.txt
src/components/ble/: NimbleController.cpp  NimbleController.h  PeerCommService.cpp  PeerCommService.h
src/displayapp/: Controllers.h  DisplayApp.cpp  DisplayApp.h
src/displayapp/apps/: Apps.h.in  CMakeLists.txt
src/displayapp/screens/: PeerComm.cpp  PeerComm.h
src/systemtask/: SystemTask.cpp
